source/ports/node_port/package/include/metacall/metacall_value.h

/**
*  @brief
*    Assign array @buffer to value buffer @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] buffer
*    Constant array to be assigned to value @v
*
*  @param[in] size
*    Number of elements contained in @buffer
*
*  @return
*    Value with array @buffer assigned to it
*/
METACALL_API void * metacall_value_from_buffer(void * v, const void * buffer, size_t size);
/**
*  @brief
*    Assign array of values @values to value array @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] values
*    Constant array of values to be assigned to value array @v
*
*  @param[in] size
*    Number of values contained in constant array @values
*
*  @return
*    Value with array of values @values assigned to it
*/
METACALL_API void * metacall_value_from_array(void * v, const void * values[], size_t size);
/**
*  @brief
*    Assign array of values @values to value map @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] tuples
*    Constant array of tuples to be assigned to value map @v
*
*  @param[in] size
*    Number of values contained in constant array @tuples
*
*  @return
*    Value with array of tuples @tuples assigned to it
*/
METACALL_API void * metacall_value_from_map(void * v, const void * tuples[], size_t size);
/**
*  @brief
*    Assign pointer reference @ptr to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @param[in] ptr
*    Pointer to be assigned to value @v
*
*  @return
*    Value with pointer @ptr assigned to it
*/
METACALL_API void * metacall_value_from_ptr(void * v, const void * ptr);
/**
*  @brief
*    Assign null to value @v
*
*  @param[in] v
*    Reference to the value
*
*  @return
*    Value with null assigned to it
*/
METACALL_API void * metacall_value_from_null(void * v);
/**
*  @brief
*    Destroy a value from scope stack
*
*  @param[in] v
*    Reference to the value
*/
METACALL_API void metacall_value_destroy(void * v);