source/ports/rs_port2/crates/metacall-bindings/src/value/mod.rs


    /// Assigns an array to the specified value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be assigned.
    /// - `buffer`: A pointer to the constant array to assign.
    /// - `size`: The number of elements in the array.
    ///
    /// # Returns
    /// A pointer to the value with the assigned array.
    pub fn metacall_value_from_buffer(
        v: *mut ::std::os::raw::c_void,
        buffer: *const ::std::os::raw::c_void,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns an array of values to the specified value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be assigned.
    /// - `values`: A pointer to the constant array of values to assign.
    /// - `size`: The number of values in the array.
    ///
    /// # Returns
    /// A pointer to the value with the assigned array of values.
    pub fn metacall_value_from_array(
        v: *mut ::std::os::raw::c_void,
        values: *mut *const ::std::os::raw::c_void,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns an array of tuples to the specified value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be assigned.
    /// - `tuples`: A pointer to the constant array of tuples to assign.
    /// - `size`: The number of tuples in the array.
    ///
    /// # Returns
    /// A pointer to the value with the assigned array of tuples.
    pub fn metacall_value_from_map(
        v: *mut ::std::os::raw::c_void,
        tuples: *mut *const ::std::os::raw::c_void,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns a pointer to the specified value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be assigned.
    /// - `ptr`: A pointer to be assigned to the value.
    ///
    /// # Returns
    /// A pointer to the value with the assigned pointer.
    pub fn metacall_value_from_ptr(
        v: *mut ::std::os::raw::c_void,
        ptr: *const ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns a future to the specified value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be assigned.
    /// - `f`: A pointer to the future to assign.
    ///
    /// # Returns
    /// A pointer to the value with the assigned future.
    pub fn metacall_value_from_future(
        v: *mut ::std::os::raw::c_void,
        f: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns a function to the specified value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be assigned.
    /// - `f`: A pointer to the function to assign.
    ///
    /// # Returns
    /// A pointer to the value with the assigned function.
    pub fn metacall_value_from_function(
        v: *mut ::std::os::raw::c_void,
        f: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns a null value to the specified value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be assigned.
    ///
    /// # Returns
    /// A pointer to the value with the assigned null.
    pub fn metacall_value_from_null(v: *mut ::std::os::raw::c_void) -> *mut ::std::os::raw::c_void;

    /// Assigns the specified class to the given value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to which the class will be assigned.
    /// - `c`: A pointer to the class to be assigned to the value.
    ///
    /// # Returns
    /// A pointer to the value with the assigned class.
    pub fn metacall_value_from_class(
        v: *mut ::std::os::raw::c_void,
        c: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns the specified object to the given value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to which the object will be assigned.
    /// - `o`: A pointer to the object to be assigned to the value.
    ///
    /// # Returns
    /// A pointer to the value with the assigned object.
    pub fn metacall_value_from_object(
        v: *mut ::std::os::raw::c_void,
        o: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns the specified exception to the given value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to which the exception will be assigned.
    /// - `ex`: A pointer to the exception to be assigned to the value.
    ///
    /// # Returns
    /// A pointer to the value with the assigned exception.
    pub fn metacall_value_from_exception(
        v: *mut ::std::os::raw::c_void,
        ex: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    /// Assigns the specified throwable to the given value.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to which the throwable will be assigned.
    /// - `th`: A pointer to the throwable to be assigned to the value.
    ///
    /// # Returns
    /// A pointer to the value with the assigned throwable.
    pub fn metacall_value_from_throwable(
        v: *mut ::std::os::raw::c_void,
        th: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;

    /// Destroys the specified value from the scope stack.
    ///
    /// # Parameters
    /// - `v`: A pointer to the value to be destroyed.
    pub fn metacall_value_destroy(v: *mut ::std::os::raw::c_void);
}
